--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "notion-toggl-proxy",
+  "name": "notion-proxy-repo",
   "version": "1.0.0",
-  "description": "Proxy for Notion and Toggl API calls.",
+  "description": "Proxy for Notion and Toggl API calls",
   "main": "api/proxy.js",
-  "scripts": {
-    "start": "node api/proxy.js"
+  "dependencies": {
+    "node-fetch": "2.6.7" 
   }
 }
