--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,8 @@
 {
-  "headers": [
+  "rewrites": [
     {
-      "source": "/api/(.*)",
-      "headers": [
-        { "key": "Access-Control-Allow-Origin", "value": "*" },
-        { "key": "Access-Control-Allow-Methods", "value": "GET, POST, OPTIONS, PATCH" },
-        { "key": "Access-Control-Allow-Headers", "value": "Content-Type, Authorization, Notion-Version" }
-      ]
+      "source": "/api/proxy",
+      "destination": "/api/proxy.js"
     }
   ]
 }
